# fastapi-pyposter

./: README.md  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2025_02_21_1146-d5f0edd262de_initial_migration.py
src/: config.py  database.py  main.py  services.py
src/dev/: router.py
src/posts/: models.py  router.py  schemas.py  service.py
tests/: conftest.py  test_posts.py
